style.css
@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Cousine:ital,wght@0,400;0,700;1,400;1,700&family=Figtree:ital,wght@0,300..900;1,300..900&family=Fira+Code:wght@300..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kristi&family=Neonderthaw&family=Overpass+Mono:wght@300..700&family=Poiret+One&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sono:wght@200..800&family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap');


@font-face {
    font-family: "Kristi";
  src: url("('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Cousine:ital,wght@0,400;0,700;1,400;1,700&family=Figtree:ital,wght@0,300..900;1,300..900&family=Fira+Code:wght@300..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kristi&family=Neonderthaw&family=Overpass+Mono:wght@300..700&family=Poiret+One&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sono:wght@200..800&family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap')");
  /* font-weight: 100 900; */
  font-style: normal;
}

@font-face {
  font-family: "Figtree";
  src: url("./index.html") format('truetype');
  font-weight: 100 900;
  font-style: normal;
}

:root {
	--spacing: 3rem;
    --color-bl:#222222;
    --color-wh:#f7f7f7;
	font-family: "Figtree";
	font-size: 125%;
}

@media (width > 600px) {
	:root {
		font-size: 150%;
		--spacing: 2rem;
	}
}

@media print {
    @page {
    	margin: 1in; 
  	}
    
	:root{
        --color-bl:#222222;
        --color-wh:#f7f7f7;
		filter: grayscale(100%);
		font: 'Figtree', 'Helvetica';
    }
/* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_media_queries/Printing */

	.gradient {
		display: none !important;
	}

	.site-header {
		color: black;
		align-content: center;
	}
	
	/* So much trial and error and so frustrating, referenced class material https://typography-interaction-2526.github.io/topic/responsive/#other-media-features */
	.project-title {
		color: black;
	}

	.project-sub {
		line-height: .5rem;
	}

	.footer-text {
		display: none !important;
	}

	footer {
		display: none !important;
	}

	.quote03 {
		page-break-inside: avoid;
        margin-block-end:0;
	}

	.quote03 blockquote {
		font-size: 1rem !important;
		line-height: 1rem !important;
		page-break-inside: avoid;
	}

	.quote04 blockquote {
		font-size: 1rem !important;
		line-height: 1rem !important;
		page-break-inside: avoid;
	}
	
    .time{
        display: none !important;
    }
    .cite-group{
        margin-block:0;
    }
    .grad-container{
        display: none !important;
    }

    #title02{
        margin-block-start:1rem;
    }
	#special-print-par {
		margin-block-end: 1rem;
	}

	/* Title is overlaping text above and this seems to push it down without effecting everything  */
	#special-print-head01 {
		margin-block-start: 1rem;
	}

	/* quote is too close to H4 Meaning and Mood */
	#special-print-head02 { 
		break-before: page;
		/* padding-block-start: 3.6rem; */
	}
}

header{
	color: var(--color-wh);
	height: 100vh;
    
    display:grid;
    grid-template-rows: 1fr 5fr 1fr;
    grid-template-columns: 1fr;
    /* justify-content: flex-start; */
    text-align:center;
    margin-block:auto;
    width:100vw;
	padding-block-start:1rem;
	padding-inline: 1rem;
    z-index:0;
    justify-content: flex-start;
    background: linear-gradient(to bottom, #AF184D,#4b2475, #FF5802, #f7f7f7);
	background-size: 500% 500%;
	animation: blend 10s ease infinite;
    text-align:center;
}
.course{
    letter-spacing:.25rem;
    font-weight: 300;
    font-size: .65rem;
    margin-block-start:0;
}
.art-name{
    margin-block:auto;
}

body {
    background: var(--color-wh);
    max-height: 150vh;
	font-size: .85rem;
	line-height: 1.25rem;
    position:relative;	
}

main {
	color: var(--color-bl);
}

h1 {
	font-family: 'Kristi';
	letter-spacing: 0.5rem;
    font-size: 8rem;
    text-align: center;
    font-weight:800;
	margin-inline: auto;
}
/* ... */

